--- a/config
+++ b/config
@@ -159,6 +159,11 @@ bar {
         status_command i3status
 }
 
+# Use light program to adjust monitor brightness
+# https://github.com/haikarainen/light
 bindsym XF86MonBrightnessUp exec light -A 5
 bindsym XF86MonBrightnessDown exec light -U 5
+
+# Move mouse cursor out of the way
+bindsym $mod+m exec xdotool mousemove 1400 800
 
