--- a/config
+++ b/config
@@ -11,6 +11,9 @@
 
 set $mod Mod4
 
+# Autolock
+exec --no-startup-id xautolock -time 1 -locker i3lock 
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 8
@@ -123,7 +126,6 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
 # exit i3 (logs you out of your X session)
-# the nagbar requires a mouse to exit so sod that, live dangerously
 # bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 bindsym $mod+Shift+e exit
 
@@ -159,7 +161,7 @@ bar {
         status_command i3status
 }
 
-# Use light program to adjust monitor brightness
+# Use 'light' to adjust monitor brightness
 # https://github.com/haikarainen/light
 bindsym XF86MonBrightnessUp exec --no-startup-id light -A 5
 bindsym XF86MonBrightnessDown exec --no-startup-id light -U 5
