--- a/config
+++ b/config
@@ -14,6 +14,9 @@ set $mod Mod4
 # Autolock
 exec --no-startup-id xautolock -time 1 -locker i3lock 
 
+# Invert touchpad scroll behaviour and enable palm detection
+exec --no-startup-id synclient VertScrollDelta=-116 PalmDetect=1 
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 8
