--- a/config
+++ b/config
@@ -12,7 +12,7 @@
 set $mod Mod4
 
 # Autolock
-exec --no-startup-id xautolock -time 1 -locker i3lock 
+exec --no-startup-id xautolock -time 2 -locker i3lock 
 
 # Invert touchpad scroll behaviour and enable palm detection
 exec --no-startup-id synclient VertScrollDelta=-116 PalmDetect=1 
@@ -158,12 +158,6 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-        status_command i3status
-}
-
 # Use 'light' to adjust monitor brightness
 # https://github.com/haikarainen/light
 bindsym XF86MonBrightnessUp exec --no-startup-id light -A 5
@@ -179,4 +173,10 @@ bindsym $mod+x exec --no-startup-id i3lock
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +2%
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -2%
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
+
+# Start i3bar to display a workspace bar (plus the system information i3status
+# finds out, if available)
+bar {
+        status_command i3status -c ~/.config/i3/i3status.conf 
+}
 
