--- a/config
+++ b/config
@@ -11,19 +11,17 @@
 
 set $mod Mod4
 
-# Autolock
-exec --no-startup-id xautolock -time 2 -locker i3lock
+# Autolock with Bing daily image
+set $Locker i3lock --image ~/bing-daily.png && sleep 1
+exec --no-startup-id ~/code/bingimg/main.py
+exec --no-startup-id xautolock -time 3 -locker '$Locker'
 
 # Shutdown menu
 # https://wiki.archlinux.org/index.php/i3#Shutdown.2C_reboot.2C_lock_screen
-set $Locker i3lock && sleep 1
 set $mode_system System (l) lock, (e) logout, (s) shutdown
 mode "$mode_system" {
     bindsym l exec --no-startup-id $Locker, mode "default"
     bindsym e exec --no-startup-id i3-msg exit, mode "default"
-    #bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
-    #bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
-    #bindsym r exec --no-startup-id systemctl reboot, mode "default"
     bindsym s exec --no-startup-id systemctl poweroff -i, mode "default"  
     # back to normal: Enter or Escape
     bindsym Return mode "default"
@@ -31,8 +29,9 @@ mode "$mode_system" {
 }
 bindsym $mod+x mode "$mode_system" 
 
-# Invert touchpad scroll behaviour and enable palm detection
-#exec --no-startup-id synclient VertScrollDelta=-116 PalmDetect=1 
+# Invert touchpad scroll behaviour and enable tap to click 
+exec --no-startup-id xinput set-prop 'SynPS/2 Synaptics TouchPad' 286 1
+exec --no-startup-id xinput set-prop 'SynPS/2 Synaptics TouchPad' 276 1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -178,7 +177,7 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Use 'light' to adjust monitor brightness
+# Use xbacklight to adjust monitor brightness
 bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 5
 bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 5
 
@@ -200,7 +199,7 @@ bar {
 exec --no-startup-id nm-applet
 
 # Assign common applications to specific workspaces 
-assign [class="^Firefox$"] → 1
+assign [class="^Firefox Developer Edition$"] → 1
 assign [class="^Gnome-terminal$"] → 2
 assign [class="^keepassxc$"] → 3
 assign [class="^Code$"] → 4
